# ROI_MOT_Deepstream

./: CMakeLists.txt  Dockerfile  README.md  build_tasks.sh  docker-compose.yml  run.sh
configs/: config_infer_primary_yolo.txt  config_tracker.txt  roi_config.json
src/: config.hpp  dwell.cpp  dwell.hpp  fps_counter.cpp  fps_counter.hpp  main.cpp  overlay.cpp  overlay.hpp  pipeline.cpp  pipeline.hpp  probe.cpp  probe.hpp  roi.cpp  roi.hpp
